--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+      body{
+        font-family: 'Poppins', sans-serif !important;
+      }
+    </style>
+
   <title>React App</title>
 </head>
 
